# ActiveCaptainCommunitySDK-android

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
activecaptaincommunitysdk/: build.gradle
activecaptaincommunitysdk/src/main/: AndroidManifest.xml
activecaptaincommunitysdk/src/main/cpp/: ActiveCaptainDatabaseJni.cpp  CMakeLists.txt
activecaptaincommunitysdk/src/main/java/com/garmin/marine/activecaptaincommunitysdk/: ActiveCaptainDatabase.java
activecaptaincommunitysdk/src/main/java/com/garmin/marine/activecaptaincommunitysdk/DTO/: AcdbUrlAction.java  CoordinateFormatType.java  DateFormatType.java  DistanceUnit.java  LastUpdateInfoType.java  MapIconType.java  MarkerType.java  SearchMarker.java  TileXY.java
app/: build.gradle
app/src/debug/java/com/garmin/marine/activecaptainsample/: ActiveCaptainConfiguration.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/garmin/marine/activecaptainsample/: ActiveCaptainApiClient.java  ActiveCaptainApiInterface.java  ActiveCaptainManager.java  ExportDownloader.java  ItemClickListener.java  LoginActivity.java  MainActivity.java  MarkerRecyclerViewAdapter.java  SearchActivity.java  SearchResultsActivity.java  WebViewActivity.java
app/src/main/java/com/garmin/marine/activecaptainsample/contract/: BoundingBox.java  TileCoordinate.java
app/src/main/java/com/garmin/marine/activecaptainsample/contract/request/: SyncStatusRequest.java
app/src/main/java/com/garmin/marine/activecaptainsample/contract/response/: ExportResponse.java  GetUserResponse.java  SyncStatusResponse.java
app/src/main/res/drawable/: list_item_background.xml
app/src/main/res/drawable-night/: list_item_background.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_search.xml  activity_search_results.xml  activity_webview.xml  markerrecyclerview_row.xml
app/src/main/res/menu/: options_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/release/java/com/garmin/marine/activecaptainsample/: ActiveCaptainConfiguration.java
gradle/wrapper/: gradle-wrapper.properties
